trunk/tests/jastadd/negative/type_errors/L4/9_OutOfBounds2.ob
MODULE TestModule;
	CONST SIZE = 10;
	VAR a : ARRAY SIZE OF INTEGER;
		n : INTEGER;
BEGIN
	n := 0;
	a[n + 2*SIZE] := 1;   (* OK, since the expression is not constant *)
	a[0] := 1;            (* OK *)
	a[SIZE] := 1          (* NOT OK *)
END TestModule.
